--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </header>
     <section class="home-hero">
       <div class="home-hero__content">
-        <h1 class="heading-primary">Kaamil Parmar</h1>
+        <h1 class="heading-primary">KL Parmar</h1>
         <div class="home-hero__info">
           <p class="text-primary">
             I'm a 3rd year Computer Science student.
@@ -165,7 +165,7 @@
                 <strong>Kaamil Parmar</strong>
                 and I'm currently in my 3rd year of my<strong> Computer Science </strong> degree.
                 I go to the Lassonde School of Engineering (York University).
-                I'm looking for an internship and also am eager to learn new skills.
+                I'm looking for an internship, COOP, or new grad. job and also am eager to learn new skills.
               </p>
               <p class="about__content-details-para">
                 Feel free to contact me at
@@ -181,9 +181,14 @@
             <div class="skills">
               <div class="skills__skill">HTML</div>
               <div class="skills__skill">CSS</div>
+              <div class="skills__skill">Bootstrap</div>
               <div class="skills__skill">JavaScript</div>
+              <div class="skills__skill">React.JS</div>
+              <div class="skills__skill">Node.JS</div>
               <div class="skills__skill">Java</div>
               <div class="skills__skill">Python</div>
+              <div class="skills__skill">C/C++</div>
+              <div class="skills__skill">MySQL</div>
               <div class="skills__skill">C</div>
               <div class="skills__skill">Unix</div>
               <div class="skills__skill">UI Design</div>
@@ -212,7 +217,7 @@
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Java: Retro Video Games</h3>
+              <h3 class="projects__row-content-title">Retro Video Games (Java)</h3>
               <p class="projects__row-content-desc">
                 Using Java, I made a few retro arcade games such as Frogger, Pong, Space Invaders, Puzzle Sliders, and more.
                 They were made utilizing OOP techqniues, GUI design, using Java applets and libraries.
@@ -235,9 +240,31 @@
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Python: GPS Viewer and Data Visualizer</h3>
+              <h3 class="projects__row-content-title">E-Commerce Application (ReactJS, NextJS)</h3>
               <p class="projects__row-content-desc">
                 These were school projects that received outstanding grades. Utilized OOP, data structures, sorting algorithms and GUI utilization all in Python.
+              </p>
+              <!-- <a
+                href="./project-2.html"
+                class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank"
+                >Case Study</a
+              > -->
+            </div>
+          </div>
+          <div class="projects__row">
+            <div class="projects__row-img-cont">
+              <img
+                src="./assets/jpeg/project-mockup-example.jpeg"
+                alt="Software Screenshot"
+                class="projects__row-img"
+                loading="lazy"
+              />
+            </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">GPS Viewer and Data Visualizer (Python)</h3>
+              <p class="projects__row-content-desc">
+                Incorporated software design techniques, APIs, OOP, and data structures to develop a program that parses datasets and displays them on a GUI in various manners.
               </p>
               <!-- <a
                 href="./project-2.html"
@@ -256,8 +283,9 @@
                 loading="lazy"
               />
             </div>
+            
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Websites Using JavaScript and React</h3>
+              <h3 class="projects__row-content-title">Website Templates (JavaScript, React)</h3>
               <p class="projects__row-content-desc">
                 Made a responsive website template in React. Made interactive websites for small businesses using HTML, CSS (Bootstrap), and Javascript.
               </p>
