--- a/index.html
+++ b/index.html
@@ -399,6 +399,8 @@
           <div class="main-footer__row main-footer__row-2">
             <h4 class="heading heading-sm text-lt">Kaamil Parmar</h4>
             <p class="main-footer__short-desc">
+              parmark5@my.yorku.ca <br/>
+              OR<br/>
               kparmar90210@gmail.com
             </p>
           </div>
