--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
+                src="./assets/png/datavis_proj.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
@@ -305,7 +305,9 @@
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main heading-sec__main--lt">Contact</span>
           <span class="heading-sec__sub heading-sec__sub--lt">
-            kparmar90210@gmail.com
+              parmark5@my.yorku.ca <br/>
+              OR<br/>
+              kparmar90210@gmail.com
           </span>
         </h2>
         <!-- <div class="contact__form-container">
@@ -359,7 +361,7 @@
               <span>Social</span>
             </h2>
             <div class="main-footer__social-cont">
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://linkedin.com/in/kl-parmar">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/linkedin-ico.png"
@@ -400,7 +402,6 @@
             <h4 class="heading heading-sm text-lt">Kaamil Parmar</h4>
             <p class="main-footer__short-desc">
               parmark5@my.yorku.ca <br/>
-              OR<br/>
               kparmar90210@gmail.com
             </p>
           </div>
