--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">E-Commerce Application (ReactJS, NextJS)</h3>
               <p class="projects__row-content-desc">
-                These were school projects that received outstanding grades. Utilized OOP, data structures, sorting algorithms and GUI utilization all in Python.
+                Made an ecommerce platform using Next.JS and React.JS for the frontend and Sanity for the backend that handles legitimate payments using Stripe.
               </p>
               <!-- <a
                 href="./project-2.html"
