--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
         <h1 class="heading-primary">KL Parmar</h1>
         <div class="home-hero__info">
           <p class="text-primary">
-            I'm a 3rd year Computer Science student.
+            York University '23 Computer Science
+            Full Stack Developer at inspoBoard
           </p>
         </div>
         <div class="home-hero__cta">
@@ -162,36 +163,39 @@
             <div class="about__content-details">
               <p class="about__content-details-para">
                 Hey! I'm
-                <strong>Kaamil Parmar</strong>
-                and I'm currently in my 3rd year of my<strong> Computer Science </strong> degree.
-                I go to the Lassonde School of Engineering (York University).
-                I'm looking for an internship, COOP, or new grad. job and also am eager to learn new skills.
+                <strong>KL Parmar</strong>
+                and I'm currently a full stack developer at inspoboard, a startup focusing on SaaS utilizing MERN stack.
+                Honour's Bachelors of Science in Computer Science at York University.
+                I have 6+ years of programming experience also I am eager to learn new skills.
               </p>
               <p class="about__content-details-para">
                 Feel free to contact me at
                 <strong>kparmar90210@gmail.com</strong>.
               </p>
             </div>
-            <a href="./#contact" class="btn btn--med btn--theme dynamicBgClr"
+            <a href="mailto:kparmar90210@gmail.com" class="btn btn--med btn--theme dynamicBgClr"
               >Contact</a
             >
           </div>
           <div class="about__content-skills">
             <h3 class="about__content-title">My Skills</h3>
             <div class="skills">
+              <div class="skills__skill">Java</div>
+              <div class="skills__skill">Python</div>
+              <div class="skills__skill">MongoDB</div>
+              <div class="skills__skill">Express.JS</div>
+              <div class="skills__skill">React.JS</div>
+              <div class="skills__skill">Node.JS</div>
               <div class="skills__skill">HTML</div>
               <div class="skills__skill">CSS</div>
               <div class="skills__skill">Bootstrap</div>
+              <div class="skills__skill">Material-UI</div>
               <div class="skills__skill">JavaScript</div>
-              <div class="skills__skill">React.JS</div>
-              <div class="skills__skill">Node.JS</div>
-              <div class="skills__skill">Java</div>
-              <div class="skills__skill">Python</div>
+              <div class="skills__skill">Typescript</div>
               <div class="skills__skill">C/C++</div>
               <div class="skills__skill">MySQL</div>
-              <div class="skills__skill">C</div>
               <div class="skills__skill">Unix</div>
-              <div class="skills__skill">UI Design</div>
+              <div class="skills__skill">Figma</div>
             </div>
           </div>
         </div>
@@ -222,12 +226,12 @@
                 Using Java, I made a few retro arcade games such as Frogger, Pong, Space Invaders, Puzzle Sliders, and more.
                 They were made utilizing OOP techqniues, GUI design, using Java applets and libraries.
               </p>
-              <!-- <a
-                href="./project-1.html"
+              <a
+                href="https://github.com/klparmar/Java-Projects"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
-                >Case Study</a
-              > -->
+                >Github</a
+              >
             </div>
           </div>
           <div class="projects__row">
@@ -240,16 +244,29 @@
               />
             </div>
             <div class="projects__row-content">
+              <h3 class="projects__row-content-title">E-Commerce Application (JavaScript, Java, Spring, Maven, MySQL, Bootstrap)</h3>
+              <p class="projects__row-content-desc">
+                Made a fullstack ecommerce platform using Maven, Java, Javascript, MySQL, Bootstrap, and REST APIs. Has a log-in and user base system. MySQL database to store
+                products Javascript frontend.
+              </p>
+              <a
+                href="https://estore4413.herokuapp.com/"
+                class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank"
+                >Demo</a
+              >
+            </div>
+            <div class="projects__row-content">
               <h3 class="projects__row-content-title">E-Commerce Application (ReactJS, NextJS)</h3>
               <p class="projects__row-content-desc">
                 Made an ecommerce platform using Next.JS and React.JS for the frontend and Sanity for the backend that handles legitimate payments using Stripe.
               </p>
-              <!-- <a
-                href="./project-2.html"
+              <a
+                href="https://react-ecomm-stripe-proj.vercel.app/"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
-                >Case Study</a
-              > -->
+                >Demo</a
+              >
             </div>
           </div>
           <div class="projects__row">
