--- a/index.html
+++ b/index.html
@@ -256,6 +256,15 @@
                 >Demo</a
               >
             </div>
+            <div class="projects__row">
+            <div class="projects__row-img-cont">
+              <img
+                src="./assets/jpeg/project-mockup-example.jpeg"
+                alt="Software Screenshot"
+                class="projects__row-img"
+                loading="lazy"
+              />
+            </div>
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">E-Commerce Application (ReactJS, NextJS)</h3>
               <p class="projects__row-content-desc">
