--- a/index.html
+++ b/index.html
@@ -256,6 +256,7 @@
                 >Demo</a
               >
             </div>
+          </div>
             <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
